demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod
spec:
      containers:
      - name: rancher-demo
        image: nginx
