oom.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: memory-demo
---
apiVersion: v1
kind: Pod
metadata:
  name: oom
  namespace: memory-demo
spec:
  containers:
  - name: oom
    image: polinux/stress
    resources:
      limits:
        memory: "200M"
      requests:
        memory: "50M"
    command: ["stress"]
    args: ["--vm", "1", "--vm-bytes", "250M", "--vm-hang", "1"]
