rancherdemo-traefik.yaml
apiVersion: v1
kind: Service
metadata:
  name: svcrancherdemo
spec:
  ports:
  - name: http
    port: 80
  type: ClusterIP
  selector:
    task: rancher
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: rancher
  labels:
    app: cheese
    cheese: rancher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cheese
      task: rancher
  template:
    metadata:
      labels:
        app: cheese
        task: rancher
        version: v0.0.1
    spec:
      containers:
      - name: cheese
        image: rancher/hello-world
        ports:
        - containerPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: lb-rancherdemo
  name: lb-rancherdemo
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: k3s.rancherdemos.com
    http:
      paths:
      - backend:
          serviceName: svcrancherdemo
          servicePort: http
